#236 Fix history green dots alignment replacing ACSII for element configuration

--- a/src/app/history/timeline/timeline.scss
+++ b/src/app/history/timeline/timeline.scss
@@ -167,16 +167,25 @@ $line-color: #d7d7d7;
               position: relative;
               top: 8px;
               z-index: 1;
-              border-top: 4px solid $active-line-color;
+              width: 100%;
+              height: 4px;
+              background: #109809;
+              //border-top: 4px solid $active-line-color;
               @include transition(all 0.5s ease-in-out);
 
               &::before,
               &::after {
                 position: absolute;
-                top: -19px;
-                content: ' \25CF';
-                font-size: 27px;
-                color: $active-line-color;
+                //top: -19px;
+                content: '';
+                //content: ' \25CF';
+                //font-size: 27px;
+                //color: $active-line-color;
+                width: 13px;
+                height: 13px;
+                border-radius: 50%;
+                background: $active-line-color;
+                transform: translate(0%,-40%);
               }
 
               &::before {
